[tool.poetry]
name = "test-py-dist"
version = "0.0.0"
description = ""
authors = ["Patrick Barker <pbarker@onemedical.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
